--- a/package.json
+++ b/package.json
@@ -7,5 +7,13 @@
   "license": "MIT",
   "version": "1.0",
   "homepage": "https://github.com/DanielKamkha/bandcamp_volume_firefox",
-  "icon": "logo_128.png"
+  "icon": "data/logo_128.png",
+  "preferences": [
+    {
+      "name": "volume",
+      "type": "integer",
+      "title": "Volume",
+      "hidden": true
+    }
+  ]
 }
