--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "bandcamp-volume",
   "title": "Bandcamp Volume",
   "id": "bandcampvolume",
-  "description": "Adds a volume slider to Bandcamp album pages on bandcamp.com",
+  "description": "Adds a volume slider to Bandcamp album pages on bandcamp.com.",
   "author": "Daniel Kamkha",
   "license": "MIT",
   "version": "1.0",
