--- a/package.json
+++ b/package.json
@@ -7,13 +7,5 @@
   "license": "MIT",
   "version": "1.0",
   "homepage": "https://github.com/DanielKamkha/bandcamp_volume_firefox",
-  "icon": "data/logo_128.png",
-  "preferences": [
-    {
-      "name": "volume",
-      "type": "string",
-      "title": "Volume",
-      "hidden": true
-    }
-  ]
+  "icon": "data/logo_128.png"
 }
