Transition to jpm

--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
   "name": "bandcamp-volume",
   "title": "Bandcamp Volume",
-  "id": "bandcampvolume",
+  "main": "lib/main.js",
   "description": "Adds a volume slider to Bandcamp album pages on bandcamp.com.",
   "author": "Daniel Kamkha",
   "license": "MIT",
-  "version": "1.1",
+  "version": "1.1.0",
   "homepage": "https://github.com/DanielKamkha/bandcamp_volume_firefox",
   "icon": "data/logo_128.png"
 }
