--- a/package.json
+++ b/package.json
@@ -6,6 +6,5 @@
   "author": "Daniel Kamkha",
   "license": "MIT",
   "version": "1.1.0",
-  "homepage": "https://github.com/DanielKamkha/bandcamp_volume_firefox",
-  "icon": "data/logo_128.png"
+  "homepage": "https://github.com/DanielKamkha/BandcampVolumeFirefox"
 }
